# miya

./: Tracer.cpp  cvtest.py
01_HSVlinetrace/app/: Tracer.cpp  Tracer.h
01_LineTrace/: Makefile.inc  app.cfg  app.cpp  app.h
01_LineTrace/Camera/: Camera.cpp  Camera.hpp
01_LineTrace/ColorSensor/: ColorSensor.cpp  ColorSensor.hpp
01_LineTrace/Motor/: Motor.cpp  Motor.hpp
04_HSVlinetrace/app/: Tracer.cpp
Debris_Removal_miya/Detect/: ColorDetect.cpp
Debris_Removal_miya/Scenario/: Scene.cpp
Debris_Removal_miya/SpikeCon/: LineTraceRun.cpp
Debris_Removal_miya_L_ver.3/Scenario/: Scenario.h  Scene.cpp  Scene.h
Debris_Removal_miya_R_ver.3/JudgeMent/: RunDistJudgeMent.h
Debris_Removal_miya_R_ver.3/Scenario/: Scene.cpp
Debris_Removal_miya_R_ver.3/SpikeCon/: PDcon.h
Debris_Removal_miya_ver.2/: Makefile.inc
Debris_Removal_miya_ver.2/Detect/: ColorDetect.h
Debris_Removal_miya_ver.2/JudgeMent/: RunDistJudgeMent2.cpp
Debris_Removal_miya_ver.2/Scenario/: Scenario.h  Scene.cpp  Scene.h
Debris_Removal_miya_ver.2/SpikeCon/: StraRun.cpp
Debris_Removal_miya_ver.2_R/JudgeMent/: RunDistJudgeMent2.h
Debris_Removal_miya_ver.2_R/Scenario/: Scene.cpp
Debris_Removal_miya_ver.2_R/SpikeCon/: PDcon.cpp  RotateRun.h
Debris_Removal_newmiya/: app.cpp
camera/: CMakeCache.txt  CMakeLists.txt  Makefile  capture  capture.cpp  capture2  capture2.cpp  cmake_install.cmake  cvtest.py
camera01/: app.cpp
double_loop_NEO_new/: app.cpp
run_L_no_model/: app.cfg
sample77/: app.cpp
tracerSample/: RoboBody.cpp  RoboBody.h  Tracer.cpp  Tracer.h  app.cpp
(+84 files in other folders)
